...
        default: nil
        }
    }

    var title: String {
        switch self {
        case .offers:  "Discover"
        case .likes:   "Likes"
        case .match:   "Match"
        case .chats:   "Chats"
        case .profile: "Profile"
        }
    }

    var systemImage: String {
        switch self {
        case .offers:  "tag.fill"
...
